# python-learning

./: .gitignore  README.md  build_apresentacao.py  pyproject.toml  refactor_slides.py  requirements.txt  serve_apresentacao.py
apresentacao/: index.html  slide8_fixed.html
apresentacao/parte2/: index.html
apresentacao/slides/: 01_abertura_introdu_o.html  02_apresenta_o_do_instrutor.html  03_agenda_geral.html  04_sobre_o_curso.html  05_por_que_python.html  06_configura_o_do_ambiente.html  07_m_dulo_1_fundamentos_abertura.html  08_vari_veis_e_tipos_b_sicos.html  09_estruturas_de_dados.html  10_estruturas_de_controle.html  11_fun_es.html  12_m_dulo_2_pandas_abertura.html  13_pandas_intro.html  14_limpeza_de_dados.html  15_qualidade_de_cadastro.html  17_visualiza_es.html  (+5 more)
modulo1_fundamentos/: 01_variaveis_tipos.ipynb  02_estruturas_controle.ipynb  03_funcoes.ipynb  README.md
modulo2_dados_com_pandas/: 01_pandas_intro.ipynb  02_limpeza_dados.ipynb  03_analise_qualidade_cadastro.ipynb  README.md
modulo3_visualizacao/: 01_visualizacao_indicadores.ipynb  README.md
modulo4_claude_code_ia/: 01_introducao_ia_desenvolvimento.ipynb  02_agents_ferramentas.ipynb  02_prompt_engineering.ipynb  03_claude_api_analise.ipynb  03_estrutura_projetos_claude.ipynb  README.md
modulo5_snowflake_qualidade/: 01_conexao_snowflake.ipynb  02_analise_qualidade_dados.ipynb  03_diagnostico_rede.ipynb  03_queries_avancadas.ipynb  README.md  snowflake_db.py
queries/: tb_consumidor.sql  tb_consumidor_por_cr.sql  tb_rede.sql
recursos/: glossario_setor_eletrico.md  links_uteis.md
(+28 files in other folders)
