[project]
name = "curso-python-energia"
version = "0.1.0"
description = "Curso Python para profissionais de distribuição de energia elétrica"
requires-python = ">=3.11"

dependencies = [
    "jupyterlab>=4.3.4",
    "notebook>=7.3.2",
    "pandas>=2.2.3",
    "numpy>=2.2.1",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "plotly>=5.24.1",
    "snowflake-connector-python[pandas]>=3.12.3",
    "cryptography>=43.0.0",
    "jinja2>=3.1.4",
    "python-dotenv>=1.0.1",
    "openpyxl>=3.1.5",
    "ipywidgets>=8.1.5",
]

[dependency-groups]
dev = [
    "ruff>=0.8.6",
    "pre-commit>=4.0.1",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]   # line-too-long — Jupyter é verboso por natureza

[tool.ruff.lint.isort]
known-first-party = ["snowflake_db"]
